Crash in VR Session when opening the Material Tab #77830

Closed
opened 2020-06-13 12:25:02 +02:00 by Jens · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14
OpenXR Runtime: SteamVR beta Version 1.13.2 (1591853506) Built 11. Jun 2020 um 07:31
HMD: Valve Index

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-12 17:01, hash: fd8d245e6a
Worked: unknown / none

Addon Information
Name: VR Scene Inspection (0, 2, 0)
Author: Julian Eisel (Severin)

Short description of error
Blender crashes when opening the Material Tab of the Properties Editor in a running VR Session (observerd with SteamVR).

Exact steps for others to reproduce the error
Method 1:

  • Start with a default startup scene
  • Make sure the Material Tab of the Properties Editor is not yet opened
  • Start a VR Session using the VR Scene Inspection Addon
  • Select an object that has a material assigned (e.g. the default Cube)
  • Open the Material Tab of the Properties Editor

Method 2:

  • Start with a default startup scene
  • Select an object that has a material assigned (e.g. the default Cube)
  • Open the Material Tab of the Properties Editor before starting the VR Session
  • Start a VR Session using the VR Scene Inspection Addon
  • Change the Base Color of the material in the Material Tab

Notes
Blender 2.90.0 Alpha as well as 2.83.0 are affected.

I was testing out the new OpenXR Developer Preview for SteamVR using the Valve Index:
https:store.steampowered.com/newshub/app/250820/view/2396425843528787269(So happy this is actually working at least on Windows now :D Can't wait for Linux support)//

Changing the Base Color of the material using nodes in the Shader Editor in a VR Session does not crash Blender.

The issue can be reproduced using just the default scene.
Never the less here is the blend file that I used to recreate the problem in case it might be of any use:
vr-crash-material-tab.blend

Crash log is here:
vr-crash-material-tab.crash.txt

Speculation:
In both methods to reproduce the problem as described above, it always takes about 3 seconds after the last step for Blender to crash.
This is also, as far as I can tell, exactly the time it takes until the Material preview icons are rendered without a VR Session
(also they never appear for me before the crash).
So my guess is that the rendering of the material preview / preview icons is causing the crash.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 OpenXR Runtime: SteamVR beta Version 1.13.2 (1591853506) Built 11. Jun 2020 um 07:31 HMD: Valve Index **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-12 17:01, hash: `fd8d245e6a` Worked: unknown / none **Addon Information** Name: VR Scene Inspection (0, 2, 0) Author: Julian Eisel (Severin) **Short description of error** Blender crashes when opening the Material Tab of the Properties Editor in a running VR Session (observerd with SteamVR). **Exact steps for others to reproduce the error** Method 1: - Start with a default startup scene - Make sure the Material Tab of the Properties Editor is not yet opened - Start a VR Session using the VR Scene Inspection Addon - Select an object that has a material assigned (e.g. the default Cube) - Open the Material Tab of the Properties Editor Method 2: - Start with a default startup scene - Select an object that has a material assigned (e.g. the default Cube) - Open the Material Tab of the Properties Editor before starting the VR Session - Start a VR Session using the VR Scene Inspection Addon - Change the Base Color of the material in the Material Tab **Notes** Blender 2.90.0 Alpha as well as 2.83.0 are affected. I was testing out the new OpenXR Developer Preview for SteamVR using the Valve Index: https:*store.steampowered.com/newshub/app/250820/view/2396425843528787269*(So happy this is actually working at least on Windows now :D Can't wait for Linux support)// Changing the Base Color of the material using nodes in the Shader Editor in a VR Session does **not** crash Blender. The issue can be reproduced using just the default scene. Never the less here is the blend file that I used to recreate the problem in case it might be of any use: [vr-crash-material-tab.blend](https://archive.blender.org/developer/F8614987/vr-crash-material-tab.blend) Crash log is here: [vr-crash-material-tab.crash.txt](https://archive.blender.org/developer/F8615002/vr-crash-material-tab.crash.txt) Speculation: In both methods to reproduce the problem as described above, it always takes about 3 seconds after the last step for Blender to crash. This is also, as far as I can tell, exactly the time it takes until the Material preview icons are rendered without a VR Session (also they never appear for me before the crash). So my guess is that the rendering of the material preview / preview icons is causing the crash.

Added subscriber: @Jens.Ne

Added subscriber: @Jens.Ne

Added subscribers: @JulianEisel, @dfelinto, @lichtwerk

Added subscribers: @JulianEisel, @dfelinto, @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@dfelinto, @JulianEisel: judging your actions, I assume this can be confirmed? [I cannot check myself...]

@dfelinto, @JulianEisel: judging your actions, I assume this can be confirmed? [I cannot check myself...]

I believe I was just illustrating the use of the workboard columns and auto-tagging :)

I believe I was just illustrating the use of the workboard columns and auto-tagging :)

This issue was referenced by 089ff4a1dd

This issue was referenced by 089ff4a1ddedae0974f8deec49dad436bb1523d9

This issue was referenced by 2dd60e6c2c

This issue was referenced by 2dd60e6c2cbdf3e39ed3451ee0f67a5b00a7a5bc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-06-23 17:29:32 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77830
There is no content yet.