source/blender/windowmanager/wm_surface.h
@@ -38,6 +38,11 @@ typedef struct wmSurface {
   void (*draw)(struct bContext *);
   /** Free customdata, not the surface itself (done by wm_surface API) */
   void (*free_data)(struct wmSurface *);
+
+  /** Called  when surface is activated for drawing (made drawable). */
+  void (*activate)(void);
+  /** Called  when surface is deactivated for drawing (current drawable cleared). */
+  void (*deactivate)(void);
 } wmSurface;
 
 /* Create/Free */
